# cherub

./: .env.example  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  ROADMAP.md  ROADMAP_DEFERRED.md  docker-compose.yml
.config/: nextest.toml
config/: default_policy.toml  example_providers.toml
examples/: mock_mcp_server.rs
src/: error.rs  lib.rs  main.rs  retry.rs
src/enforcement/: capability.rs  extraction.rs  mod.rs  policy.rs  shell.rs  tier.rs
src/providers/: anthropic.rs  config.rs  failover.rs  mod.rs  openai.rs  openai_wire.rs  pricing.rs  wire.rs
src/runtime/: approval.rs  mod.rs  output.rs  prompt.rs  session.rs  tokens.rs
src/storage/: credential_types.rs  crypto.rs  embedding.rs  mod.rs  pg_audit_store.rs  pg_cost_store.rs  pg_credential_store.rs  pg_memory_store.rs  pg_pricing_store.rs  pg_session_store.rs  search.rs
src/storage/migrations/: V1__initial_schema.sql  V2__vector_indexes.sql  V3__credentials.sql  V4__audit_log.sql  V5__cost_tracking.sql  V6__model_pricing.sql
src/telegram/: approval.rs  connector.rs  mod.rs  output.rs  session.rs
src/tools/: bash.rs  container_bash.rs  credential_broker.rs  dev_environment.rs  file.rs  http.rs  leak_detector.rs  memory.rs  mod.rs  path.rs
src/tools/container/: capabilities.rs  host.rs  ipc.rs  loader.rs  mod.rs  runtime.rs  wrapper.rs
src/tools/mcp/: client.rs  config.rs  loader.rs  mod.rs  proxy.rs
src/tools/wasm/: capabilities.rs  host.rs  limits.rs  loader.rs  mod.rs  runtime.rs  wrapper.rs
tests/: adversarial.rs  compaction.rs  container_bash.rs  container_lifecycle.rs  cost_store.rs  dev_environment.rs  embedding_live.rs  failover_integration.rs  file_enforcement.rs  mcp_integration.rs  memory_enforcement.rs  memory_injection.rs  memory_store.rs  openai_retry_integration.rs  redteam.rs  retry_integration.rs  session_persistence.rs  telegram_approval.rs
tests/fixtures/: mod.rs
tests/ui/: capability_token_private.rs  capability_token_private.stderr
tools-src/example-api/: Cargo.toml  example-api.capabilities.toml
tools-src/example-api/src/: lib.rs
wit/: tool.wit
