[package]
name = "cherub"
version = "0.1.0"
edition = "2024"
description = "Secure agent runtime. Deterministic capability enforcement for AI agents."
license = "MIT OR Apache-2.0"

[features]
telegram = ["dep:teloxide", "dep:base64"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
toml = "1.0"
regex = "1.12"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
secrecy = "0.10.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rustyline = "17.0"
dotenvy = "0.15"

# Telegram feature dependencies
teloxide = { version = "0.17", features = ["macros"], optional = true }
base64 = { version = "0.22", optional = true }

[[bin]]
name = "cherub"
path = "src/main.rs"

[[bin]]
name = "cherub-telegram"
path = "src/bin/telegram.rs"
required-features = ["telegram"]

[dev-dependencies]
trybuild = "1.0"
