[package]
name = "cherub"
version = "0.1.0"
edition = "2024"
description = "Secure agent runtime. Deterministic capability enforcement for AI agents."
license = "MIT OR Apache-2.0"

[features]
telegram = ["dep:teloxide", "dep:base64"]
# postgres: database infrastructure — connection pool, migrations, SessionStore/MemoryStore traits, PgSessionStore/PgMemoryStore.
# Use when you need postgres for any purpose (sessions, credentials M7, memory M6b).
postgres = [
    "dep:deadpool-postgres",
    "dep:tokio-postgres",
    "dep:refinery",
    "dep:chrono",
    "dep:async-trait",
    "dep:pgvector",
]
# sessions: session persistence wiring — persist_last(), with_persistence(), CLI/Telegram hooks.
# Implies postgres. Use to make conversations survive restarts.
sessions = ["postgres"]
# memory: enforced memory tool — store/recall/search/update/forget memories across sessions.
# Implies postgres. All memory operations pass through the enforcement pipeline.
memory = ["postgres"]
# credentials: encrypted credential vault + HTTP tool with broker injection (M7).
# Implies postgres (vault storage). Requires CHERUB_MASTER_KEY env var at runtime.
credentials = ["postgres", "dep:aes-gcm", "dep:hkdf", "dep:sha2", "dep:rand", "dep:url"]
# wasm: WASM sandbox for untrusted tool execution (M8).
# Independent feature — does not imply postgres or credentials.
# Credential injection is available when `credentials` is also enabled.
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:blake3", "dep:url"]
# container: Docker/Podman container sandbox for heavy/polyglot tool execution (M9).
# Independent feature — does not imply postgres or credentials.
# Long-lived containers communicate via Unix domain socket IPC.
container = ["dep:bollard", "dep:async-trait", "dep:url", "dep:tempfile"]
# mcp: MCP (Model Context Protocol) server support (M11).
# Spawn MCP server processes, discover tools, route calls through enforcement.
# Independent feature — does not imply postgres or credentials.
mcp = ["dep:rmcp"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
toml = "1.0"
regex = "1.12"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
secrecy = "0.10.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rustyline = "17.0"
dotenvy = "0.15"
# Non-optional: tiny crate, v7 for time-sortable IDs (better B-tree indexing)
uuid = { version = "1.21", features = ["v7", "serde"] }

# Telegram feature dependencies
teloxide = { version = "0.17", features = ["macros"], optional = true }
base64 = { version = "0.22", optional = true }

# PostgreSQL feature dependencies
async-trait = { version = "0.1", optional = true }
deadpool-postgres = { version = "0.14", optional = true }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"], optional = true }
refinery = { version = "0.9", features = ["tokio-postgres"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
pgvector = { version = "0.4", features = ["postgres"], optional = true }

# Credentials feature dependencies (M7)
aes-gcm = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.9", optional = true }
url = { version = "2.5", optional = true }

# WASM sandbox feature dependencies (M8)
wasmtime = { version = "41", features = ["component-model"], optional = true }
wasmtime-wasi = { version = "41", optional = true }
blake3 = { version = "1.8", optional = true }

# Container sandbox feature dependencies (M9)
bollard = { version = "0.20", optional = true }
tempfile = { version = "3", optional = true }

# MCP server support dependencies (M11)
rmcp = { version = "0.17", features = ["client", "transport-child-process"], optional = true }

[[bin]]
name = "cherub"
path = "src/main.rs"

[[bin]]
name = "cherub-telegram"
path = "src/bin/telegram.rs"
required-features = ["telegram"]

[dev-dependencies]
trybuild = "1.0"
testcontainers = { version = "0.27", features = ["reusable-containers"] }
wiremock = "0.6"
tempfile = "3"
rmcp = { version = "0.17", features = ["server", "transport-async-rw", "transport-io"] }
