[package]
name = "example-api"
version = "0.1.0"
edition = "2024"
description = "Example WASM tool for Cherub: fetches public JSON data"

# Component model target: wasm32-wasip2
# Build with: cargo build --target wasm32-wasip2 --release

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
